Fixed a bug with horizontal scroll (case study)

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -418,6 +418,7 @@ a{
 
     &--prev, &--next{
         padding: 18px;
+        cursor: pointer;
     }
 
     &--prev{
